[package]

name = "tree"
version = "0.0.3"
authors = ["Andrew Paseltiner <apaseltiner@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/apasel422/tree"
repository = "https://github.com/apasel422/tree"
documentation = "https://apasel422.github.io/tree/tree"
keywords = ["collection", "map", "set", "data-structure"]
description = "A collection based on a binary search tree."

[features]

default = ["ordered_iter", "quickcheck"]

[dependencies]

compare = "*"

[dependencies.quickcheck]

optional = true

[dependencies.ordered_iter]

optional = true

[dev-dependencies]

quickcheck = "*"
quickcheck_macros = "*"
rand = "*"
